[gd_scene load_steps=2 format=4 uid="uid://duvlvybm8u3ap"]

[ext_resource type="Script" path="res://autoload/dev_tools/scene_changer.gd" id="1"]

[node name="SceneChanger" type="Window"]
title = "Go To ..."
initial_position = 2
size = Vector2i(150, 100)
popup_window = true
script = ExtResource("1")

[node name="MainContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Columns" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Arcs" type="VBoxContainer" parent="MainContainer/Columns"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/Columns/Arcs"]
layout_mode = 2
text = "Arcs"
horizontal_alignment = 1

[node name="Scenarios" type="VBoxContainer" parent="MainContainer/Columns"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/Columns/Scenarios"]
layout_mode = 2
text = "Scenarios"
horizontal_alignment = 1

[node name="Scenarios2" type="VBoxContainer" parent="MainContainer/Columns"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/Columns/Scenarios2"]
layout_mode = 2
text = "Scenarios"
horizontal_alignment = 1

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
